🆕 feat: add options to include files' content - getDIDsbyComp
